CPPFLAGS	+=	-Icommon -I$(top_srcdir)/xbmc -I$(top_srcdir)/xbmc/cores
CPPFLAGS	+=	-I$(top_srcdir)/xbmc/linux -I$(top_srcdir)/xbmc/utils
CPPFLAGS	+=	@SDL_CFLAGS@ @FREETYPE2_CFLAGS@
SUBDIRS 		= 	common tinyXML
noinst_LIBRARIES 	=	libguilib.a
libguilib_a_SOURCES 	=	ActionManager.cpp \
				AnimatedGif.cpp \
				AudioContext.cpp \
				DirectXGraphics.cpp \
				FrameBufferObject.cpp \
				GUIAudioManager.cpp \
				GUIBaseContainer.cpp \
				GUIBorderedImage.cpp \
				GUIButtonControl.cpp \
				GUIButtonScroller.cpp \
				GUICheckMarkControl.cpp \
				GUIColorManager.cpp \
				GUIControl.cpp \
				GUIControlFactory.cpp \
				GUIControlGroup.cpp \
				GUIControlGroupList.cpp \
				GUIDialog.cpp \
				GUIEditControl.cpp \
				GUIFadeLabelControl.cpp \
				GUIFixedListContainer.cpp \
				GUIFont.cpp \
				GUIFontManager.cpp \
				GUIFontTTF.cpp \
				GUIImage.cpp \
				GUIIncludes.cpp \
				GUIInfoColor.cpp \
				GUILabelControl.cpp \
				GUIListContainer.cpp \
				GUIListGroup.cpp \
				GUIListItem.cpp \
				GUIListItemLayout.cpp \
				GUIListLabel.cpp \
				GUIMessage.cpp \
				GUIMoverControl.cpp \
				GUIMultiImage.cpp \
				GUIMultiSelectText.cpp \
				GUIPanelContainer.cpp \
				GUIProgressControl.cpp \
				GUIRSSControl.cpp \
				GUIRadioButtonControl.cpp \
				GUIResizeControl.cpp \
				GUIScrollBarControl.cpp \
				GUISelectButtonControl.cpp \
				GUISettingsSliderControl.cpp \
				GUISliderControl.cpp \
				GUISound.cpp \
				GUISpinControl.cpp \
				GUISpinControlEx.cpp \
				GUIStandardWindow.cpp \
				GUITextBox.cpp \
				GUITextLayout.cpp \
				GUITexture.cpp \
				GUITextureD3D.cpp \
				GUITextureGL.cpp \
				GUITextureSDL.cpp \
				GUIToggleButtonControl.cpp \
				GUIVideoControl.cpp \
				GUIVisualisationControl.cpp \
				GUIWindow.cpp \
				GUIWindowManager.cpp \
				GUIWrappingListContainer.cpp \
				GraphicContext.cpp \
				IWindowManagerCallback.cpp \
				Key.cpp \
				LocalizeStrings.cpp \
				Shader.cpp \
				SkinInfo.cpp \
				Surface.cpp \
				TextureBundle.cpp \
				TextureManager.cpp \
				VisibleEffect.cpp \
				XMLUtils.cpp \
				include.cpp

# vim: ts=8:sw=8:noexpandtab
